fix row height on mobile

--- a/src/Pages/MotoRoutePage.scss
+++ b/src/Pages/MotoRoutePage.scss
@@ -1,14 +1,13 @@
 
 
 .map-details-container {
-    height: 40em;
 
 
     .moto-route-map-container { 
-        height: 100%;
+        height: 40em;
     }
 
     .moto-route-details-container { 
-        height: 100%; 
+        height: 40em;
     }
 }
